[Bug :hammer: :heavy_plus_sign: ] Fix Misalignment and Update Contributors

--- a/_sass/contributor.scss
+++ b/_sass/contributor.scss
@@ -37,7 +37,7 @@
 			}
 		}
 	.name {
-		font-size: calc(.8em + 1.4vw);
+		font-size: calc(.75em + 1.1vw);
 		margin-top: 0px;
 	}
 	.names {
